# nasiko

./: .gitignore  .nasiko-local.env  ARCHITECTURE_NOTES.md  AUTH_MODE_CODE_SNIPPETS.md  AUTH_MODE_IMPLEMENTATION.md  CHANGES_SUMMARY.md  CLAUDE.md  DELIVERY_MANIFEST.md  DOCKER_SETUP_PLAN.md  Dockerfile.worker  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md  docker-compose.nasiko.yml
agent-gateway/: docker-compose.yml
agent-gateway/registry/: registry.py  requirements.txt
agents/crewai/: AgentCard.json  Dockerfile  docker-compose.yml  pyproject.toml
agents/langgraph/: AgentCard.json  Dockerfile  docker-compose.yml  pyproject.toml
agents/translator/: AgentCard.json  Dockerfile  docker-compose.yml  pyproject.toml
agents/translator/src/: base_agent.py  chat_history.py  document_parser.py  engine.py  llm.py
app/: Dockerfile
app/repository/: base_repository.py
app/service/: agent_upload_service.py  agent_upload_tracking_service.py  n8n_service.py
auth-service-oss/: Dockerfile  main.py
cli/auth/: auth_manager.py
cli/groups/: images_group.py  (+1 more)
docs/: AGENT_PORT_FIX_PLAN.md  API.md  ARCHITECTURE.md  AUTH_SYSTEM_PLAN.md  CLI.md  INDEX.md  K8S_TROUBLESHOOTING.md  LOCAL_DEVELOPMENT.md  OPEN_SOURCE_SEPARATION_PLAN.md  SEPARATION_ARCHITECTURE.md  SEPARATION_QUICK_REFERENCE.md  SETUP.md  SIMPLIFIED_AUTH_PLAN.md  how-to-upload.md
orchestrator/: agent_builder.py  config.py  network_manager.py  orchestrator.py  redis_stream_listener.py  requirements.txt  service_manager.py
worker/: k8s_build_worker.py
(+31 files in other folders)
